# ai-development-system

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  GETTING-STARTED.md  README.md  SETUP.md  docker-compose.yml  pyproject.toml  run-gateway.ps1
.claude/commands/: review-verification.md  start-project.md
.eval_runs/pre-v2-full/: aggregate.json  meta.json  migration_baseline.md
docs/: architecture.md  integration-guide.md  memory-analysis.md  presentation-project-overview.md  telegram-setup.md  workflow-v2.md  workflow.md
docs/diagrams/: data-flow-v2.md  data-flow.md  memory-layers.md  system-overview.md
docs/schema/: application-invariants.sql  artifact-storage-contract.md  control-layer-schema.sql  execution-engine.md
examples/: README.md
examples/01-basic-crew/: README.md  crew_with_agents.py
examples/02-spec-driven-crew/: README.md  spec_to_crew.py
examples/03-full-pipeline/: README.md  full_pipeline.py
examples/04-debate-pipeline/: README.md  agent_pairing.py  approval_gate.py  debate_crew.py  debate_pipeline.py  report_formatter.py  task_graph_generator.py
references/: agency-agents.md  beads.md  crewai.md  openspec.md  superpowers.md
references/agency-agents/: backend_architect.md  behavioral_psychologist.md  database_specialist.md  devops_specialist.md  frontend_engineer.md  infra_engineer.md  legal_counsel.md  market_analyst.md  ml_engineer.md  mobile_engineer.md  product_manager.md  qa_engineer.md  retention_growth_strategist.md  security_specialist.md  ux_designer.md  ux_researcher.md
research/: 2026-03-29-initial-analysis.md  README.md
research/experiments/: README.md
skills/: review-debate.md  start-project.md
src/ai_dev_system/: config.py  debate_pipeline.py  feature_flags.py  finalize_spec.py  llm_factory.py  normalize.py  pipeline.py  spec_bundle.py  utils.py  webui.py
src/ai_dev_system.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py
tests/integration/: test_beads_sync.py  test_claude_max_execution.py  test_create_from_graph.py  test_debate_pipeline.py  test_e2e_single_task.py  test_eval_cli.py  test_execution_chain.py  test_executor_e2e.py  (+28 more)
(+512 files in other folders)
