[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-dev-system"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # SQLite is stdlib — no DB driver dependency
    "anthropic>=0.25",
    "openai>=1.30",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "rich>=13",
    "pyyaml>=6.0",
    "claude-agent-sdk>=0.1",
]

[project.scripts]
ai-dev = "ai_dev_system.cli.main:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.12"]
execution = ["crewai>=0.51"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ai_dev_system = [
    "../../skills/*.md",
    "../../docs/schema/*.sql",
    "../../docs/schema/migrations/*.sql",
    "intake/templates/*.yaml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: integration tests (multi-component, may use subprocess/threads)",
]
